k8s/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: server
          image: ghcr.io/pmihaly/learning-k8s:master
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
          # resources:
          #   requests:
          #     cpu: "250m"
          #   limits:
          #     cpu: "500m"
      imagePullSecrets:
      - name: dockerconfigjson


---
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  selector:
    component: web
  type: ClusterIP
  ports:
    - name: server-port
      port: 3000
